feat: add favicon

--- a/songbird/index.html
+++ b/songbird/index.html
@@ -7,6 +7,7 @@
     <title>Dota 2 quiz</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.1/css/bootstrap-reboot.rtl.min.css"/>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="icon" type="image/x-icon" href="assets/icons/favicon.ico" />
 </head>
 <body class="body">
     <div class="promo">
