feat: create gage page

--- a/songbird/index.html
+++ b/songbird/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.1/css/bootstrap-reboot.rtl.min.css"/>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="icon" type="image/x-icon" href="assets/icons/favicon.ico" />
+    
 </head>
 <body class="body">
     <div class="promo">
@@ -20,7 +21,7 @@
             <div class="promo__shadow"></div>
         </div>
         <div class="promo__text">
-            <div class="promo__title">
+            <div class="promo__title animate__animated animate__fadeInUp">
                 <span class="minor">Викторина по героям игры</span>
                 <br>DOTA 2
             </div>
