feat: add header to game page

--- a/songbird/game.html
+++ b/songbird/game.html
@@ -10,11 +10,89 @@
     <link rel="icon" type="image/x-icon" href="assets/icons/favicon.ico" />
 </head>
 <body class="body">
-    
-  <div class="game">
-    <div class="game__bg">
-      <img src="./assets/img/game-bg.jpg" alt="background" class="game__bg-img">
-      <img src="./assets/img/fire.gif" alt="background" class="game__bg-img-fire">
+
+  <div class="game__bg">
+    <img src="./assets/img/game-bg.jpg" alt="background" class="game__bg-img">
+    <img src="./assets/img/fire.gif" alt="background" class="game__bg-img-fire">
+  </div>
+
+  <header class="header">
+    <div class="container">
+      <div class="header__wrapper">
+        <div class="header__logo-with-lang">
+
+          <a href="./" class="logo">
+            <div class="logo__wrapper">
+              <div class="logo__image">
+                <img src="./assets/icons/dota-logo.png" alt="logo">
+              </div>
+              <div class="logo__title">
+                quiz
+              </div>
+            </div>
+          </a>
+  
+          <div class="language">
+            <div class="language__wrapper">
+              <div class="language__icon">
+                <img src="./assets/icons/language.svg" alt="language icon">
+              </div>
+              <div class="language__title">
+                язык
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="header__btn">
+          <div class="header__btn-inner-text">
+            <img src="./assets/icons/bounty.webp" alt="bounty rune">
+            счет: 
+            <span class="header__btn-inner-score">12</span>
+          </div>
+        </div>
+        
+      </div>
+    </div>
+  </header>
+
+  <div class="pagination">
+    <div class="container">
+      <div class="pagination__bg">
+        <div class="pagination__wrapper">
+          <li class="pagination__item pagination__item_active">
+            <div class="pagination__link">
+              Центральная линия
+            </div>
+          </li>
+          <li class="pagination__item">
+            <div class="pagination__link">
+              Сложная линия
+            </div>
+          </li>
+          <li class="pagination__item">
+            <div class="pagination__link">
+              Легкая линия
+            </div>
+          </li>
+          <li class="pagination__item">
+            <div class="pagination__link">
+              Лес
+            </div>
+          </li>
+          <li class="pagination__item">
+            <div class="pagination__link">
+              Роуминг
+            </div>
+          </li>
+          <li class="pagination__item">
+            <div class="pagination__link">
+              Поддержка
+            </div>
+          </li>
+        </div>
+      </div>
     </div>
   </div>
 
