feat: add custom audio player

--- a/songbird/game.html
+++ b/songbird/game.html
@@ -96,6 +96,48 @@
     </div>
   </div>
 
+  <div class="jumbotron">
+    <div class="container">
+        <div class="jumbotron__wrapper">
+          <div class="jumbotron__img">
+            <img src="./assets/img/anon.png" alt="anonimous photo">
+          </div>
+          <div class="jumbotron__player">
+            <div class="jumbotron__title">
+              ******
+            </div>
+            <div class="jumbotron__divider"></div>
+           
+            <div class="audio-player">
+              <div class="timeline">
+                <div class="progress" style="width: 1.99066%;"></div>
+              </div>
+              <div class="controls">
+                <div class="play-container">
+                  <div class="toggle-play play">
+                </div>
+                </div>
+                <div class="time">
+                  <div class="current">0:02</div>
+                  <div class="divider">/</div>
+                  <div class="length">1:44</div>
+                </div>
+                <div class="volume-container">
+                  <div class="volume-button">
+                    <div class="volume icono-volumeMedium"></div>
+                  </div>
+                  <div class="volume-slider">
+                    <div class="volume-percentage" style="width: 40.8333%;"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+    </div>
+  </div>
+
   <script src="script.js"></script>
 </body>
 </html>
