feat: add controls elements to game

--- a/songbird/game.html
+++ b/songbird/game.html
@@ -57,7 +57,7 @@
     </div>
   </header>
 
-  <div class="pagination">
+  <section class="pagination">
     <div class="container">
       <div class="pagination__bg">
         <div class="pagination__wrapper">
@@ -94,9 +94,9 @@
         </div>
       </div>
     </div>
-  </div>
+  </section>
 
-  <div class="jumbotron">
+  <section class="jumbotron">
     <div class="container">
         <div class="jumbotron__wrapper">
           <div class="jumbotron__img">
@@ -110,7 +110,7 @@
            
             <div class="audio-player">
               <div class="timeline">
-                <div class="progress" style="width: 1.99066%;"></div>
+                <div class="progress" style="width: 0%;"></div>
               </div>
               <div class="controls">
                 <div class="play-container">
@@ -118,16 +118,16 @@
                 </div>
                 </div>
                 <div class="time">
-                  <div class="current">0:02</div>
+                  <div class="current">0:00</div>
                   <div class="divider">/</div>
-                  <div class="length">1:44</div>
+                  <div class="length">00:00</div>
                 </div>
                 <div class="volume-container">
                   <div class="volume-button">
                     <div class="volume icono-volumeMedium"></div>
                   </div>
                   <div class="volume-slider">
-                    <div class="volume-percentage" style="width: 40.8333%;"></div>
+                    <div class="volume-percentage" style="width: 75%;"></div>
                   </div>
                 </div>
               </div>
@@ -136,6 +136,110 @@
           </div>
         </div>
     </div>
+  </section>
+  
+
+  <div class="container">
+    <div class="game-controls">
+      <section class="variant">
+        <ul class="variant__wrapper">
+          <div class="variant__list">
+            <span class="variant__status">
+              <img style="width: 32px;" src="https://static.wikia.nocookie.net/dota2_gamepedia/images/d/d6/Storm_Spirit_minimap_icon.png" alt="">
+            </span>
+            Storm Spirit
+          </div>
+          <div class="variant__list">
+            <span class="variant__status"></span>
+            Tinker
+          </div>
+          <div class="variant__list variant__list_incorrect">
+            <span class="variant__status"></span>
+            Shadow Fiend
+          </div>
+          <div class="variant__list">
+            <span class="variant__status"></span>
+            Void Spirit
+          </div>
+          <div class="variant__list variant__list_correct">
+            <span class="variant__status"></span>
+            Invoker
+          </div>
+          <div class="variant__list">
+            <span class="variant__status"></span>
+            Outworld Destroyer
+          </div>
+        </ul>
+      </section>
+
+      <section class="details">
+        <div class="details__wrapper">
+          <div class="details__instruction">
+            <div class="details__instruction-text">
+              <span class="details__instruction-title">Инструкция</span> <br>
+              1. Включите плеер и прослушайте героя.<br>
+              2. Выберите героя из списка голос которого прозвучал.<br>
+              3. После выбора правильного героя нажмите "Далее".
+            </div>
+          </div>
+
+          <div class="details__hero hero">
+            <div class="hero__wrapper">
+              <div class="hero__video">
+                <video width="140" height="140" autoplay muted loop>
+                  <source src="https://cdn.cloudflare.steamstatic.com/apps/dota2/videos/dota_react/heroes/renders/storm_spirit.webm" type="	video/webm">
+                  Your browser does not support the video tag.
+                </video>
+              </div>
+              <div class="hero__descr">
+                <div class="hero__name">
+                  Storm Spirit
+                </div>
+                <div class="hero__phrase">
+                  "Everyone complains about the weather…well, I'm doing something about it!"
+                </div>
+                
+                <div class="hero__audio">
+                  <div class="audio-player">
+                    <div class="timeline">
+                      <div class="progress" style="width: 0%;"></div>
+                    </div>
+                    <div class="controls">
+                      <div class="play-container">
+                        <div class="toggle-play play">
+                      </div>
+                      </div>
+                      <div class="time">
+                        <div class="current">0:00</div>
+                        <div class="divider">/</div>
+                        <div class="length">00:00</div>
+                      </div>
+                      <div class="volume-container">
+                        <div class="volume-button">
+                          <div class="volume icono-volumeMedium"></div>
+                        </div>
+                        <div class="volume-slider">
+                          <div class="volume-percentage" style="width: 75%;"></div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+            </div>
+
+            <div class="hero__text">
+              Райдзин Громокег — сила природы в самом буквальном смысле: это буйная энергия ветра и непогоды, заключённая в человеческом обличье. Как же он неистов, неудержим и задорен! Весёлый, словно любимый дядюшка, Райдзин заряжает всё вокруг своей искрящейся энергией. Но не всегда всё было именно так: начало его жизни положила трагедия. Много поколений назад, на плато за Скулящими горами, добрые люди страдали от голода и засухи. Обычный маг стихий Громокег запретным заклинанием призвал духа бури, умоляя его о дожде. Разгневанный дерзостью смертного, небесный Райдзин обрушил на землю потопы и ураганы. Громокег не мог противостоять духу, пока не произнёс самоубийственное заклятье, сковавшее их судьбы: он запер небесного духа в клетке собственного тела. С тех пор громогласный Райдзин и задорный Громокег навсегда стали жизнерадостным небожителем, ступающим по земле — и имя ему Райдзин Громокег.
+            </div>
+
+          </div>
+        </div>
+
+
+      </section>
+    </div>
+
   </div>
 
   <script src="script.js"></script>
