feat: add showing details for hero by click

--- a/songbird/game.html
+++ b/songbird/game.html
@@ -146,29 +146,29 @@
       <div class="game-controls">
         <section class="variant">
           <ul class="variant__wrapper">
-            <div class="variant__list">
+            <div class="variant__list" heroId="17">
               <span class="variant__status">
                 <!-- <img style="width: 32px;" src="https://static.wikia.nocookie.net/dota2_gamepedia/images/d/d6/Storm_Spirit_minimap_icon.png" alt=""> -->
               </span>
               Storm Spirit
             </div>
-            <div class="variant__list">
+            <div class="variant__list" heroId="34">
               <span class="variant__status"></span>
               Tinker
             </div>
-            <div class="variant__list">
+            <div class="variant__list" heroId="11">
               <span class="variant__status"></span>
               Shadow Fiend
             </div>
-            <div class="variant__list">
+            <div class="variant__list" heroId="126">
               <span class="variant__status"></span>
               Void Spirit
             </div>
-            <div class="variant__list">
+            <div class="variant__list" heroId="74">
               <span class="variant__status"></span>
               Invoker
             </div>
-            <div class="variant__list">
+            <div class="variant__list" heroId="76">
               <span class="variant__status"></span>
               Outworld Destroyer
             </div>
