feat: add show correct results to result page

--- a/songbird/results.html
+++ b/songbird/results.html
@@ -23,7 +23,7 @@
         <div class="results__text">
             <div class="results__title animate__animated animate__fadeInUp">
                 <span class="minor">Поздравляем!</span>
-                <br>Вы прошли викторину и набрали 25 из 30 возможных баллов
+                <br>Вы прошли викторину и набрали <span class="results__score-points">25</span> из 30 возможных баллов
             </div>
             <div class="results__descr">
                 <a href="/game.html">
