feat: add links to rs course and creator github to main page

--- a/songbird/index.html
+++ b/songbird/index.html
@@ -21,10 +21,10 @@
             <div class="promo__shadow"></div>
         </div>
         <div class="promo__text">
-            <div class="promo__title animate__animated animate__fadeInUp">
+            <h1 class="promo__title animate__animated animate__fadeInUp">
                 <span class="minor">Викторина по героям игры</span>
                 <br>DOTA 2
-            </div>
+            </h1>
             <div class="promo__divider"></div>
             <div class="promo__descr">Dota — одна из наиболее популярных онлайн игр современности. Каждый день в неё играют сотни тысяч людей. А главный турнир The International ежигодно приковывает взгляды миллионов людей со всего мира.
                 Поэтому предлогаю вам познакомится чуть ближе с миром этой игры, а знакомым с ней, испытать свои познания в репликах всем известных героев.
@@ -34,7 +34,18 @@
                     </div>
                 </a>
             </div>
-    </div>
+        </div>
+        <footer class="footer">
+            <div class="footer__wrapper">
+                <a href="https://github.com/greiner94">
+                    <img src="./assets/icons/github.svg" alt="creater github link" class="footer__github">
+                </a>
+                <a href="https://rs.school/js/">
+                    <img src="./assets/icons/rs_school.svg" alt="rs school link" class="footer__rs">
+                </a>
+                <div alt="year of creating" class="footer__year">2022</div>
+            </div>
+        </footer>
     </div>
 
     <script src="script.js"></script>
