--- a/songbird/results.html
+++ b/songbird/results.html
@@ -21,10 +21,10 @@
             <div class="results__shadow"></div>
         </div>
         <div class="results__text">
-            <div class="results__title animate__animated animate__fadeInUp">
+            <h1 class="results__title animate__animated animate__fadeInUp">
                 <span class="minor">Поздравляем!</span>
-                <br>Вы прошли викторину и набрали <span class="results__score-points">25</span> из 30 возможных баллов
-            </div>
+                <br>Вы прошли викторину и набрали <span class="results__score-points">0</span> из 30 возможных баллов
+            </h1>
             <div class="results__descr">
                 <a href="/game.html">
                     <div class="results__btn">
@@ -32,7 +32,7 @@
                     </div>
                 </a>
             </div>
-    </div>
+        </div>
     </div>
 
     <script src="script.js"></script>
