fix: correct display on different screens on results page

--- a/songbird/results.html
+++ b/songbird/results.html
@@ -13,11 +13,9 @@
 <body class="body">
     <div class="results">
         <div class="results__bg">
-            <picture class="results__img-wrapper">
-                <source media="(max-width: 799px)" srcset="./assets/img/final-bg.jpg" />
-                <source media="(min-width: 800px)" srcset="./assets/img/final-bg.jpg" />
+            <div class="results__img-wrapper">
                 <img class="results__img" src="./assets/img/final-bg.jpg" alt="background image" />
-            </picture>
+            </div>
             <div class="results__shadow"></div>
         </div>
         <div class="results__text">
