fix: adative all pages to any screens

--- a/songbird/game.html
+++ b/songbird/game.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="icon" type="image/x-icon" href="assets/icons/favicon.ico" />
 </head>
-<body class="body">
+<body class="body-game">
 
   <div class="game__bg">
     <img src="./assets/img/game-bg.jpg" alt="background" class="game__bg-img">
