--- a/songbird/index.html
+++ b/songbird/index.html
@@ -22,15 +22,18 @@
         </div>
         <div class="promo__text">
             <h1 class="promo__title animate__animated animate__fadeInUp">
-                <span class="minor">Викторина по героям игры</span>
+                <span class="minor" data-lang="minor">Викторина по героям игры</span>
                 <br>DOTA 2
             </h1>
             <div class="promo__divider"></div>
-            <div class="promo__descr">Dota — одна из наиболее популярных онлайн игр современности. Каждый день в неё играют сотни тысяч людей. А главный турнир The International ежигодно приковывает взгляды миллионов людей со всего мира.
-                Поэтому предлогаю вам познакомится чуть ближе с миром этой игры, а знакомым с ней, испытать свои познания в репликах всем известных героев.
+            <div class="promo__descr">
+                <span  data-lang="promo-descr">
+                    Dota — одна из наиболее популярных онлайн игр современности. Каждый день в неё играют сотни тысяч людей. А главный турнир The International ежигодно приковывает взгляды миллионов людей со всего мира.
+                    Поэтому предлогаю вам познакомится чуть ближе с миром этой игры, а знакомым с ней, испытать свои познания в репликах всем известных героев.
+                </span>
                 <a href="/game.html">
                     <div class="promo__btn">
-                        <div class="promo__btn-inner-text">начать викторину</div>
+                        <div class="promo__btn-inner-text" data-lang="start-game-btn">начать викторину</div>
                     </div>
                 </a>
             </div>
