feat: add background music

--- a/songbird/game.html
+++ b/songbird/game.html
@@ -40,7 +40,7 @@
                 <div class="language__icon">
                   <img src="./assets/icons/language.svg" alt="language icon">
                 </div>
-                <div class="language__title"  data-lang="lang-switcher">
+                <div class="language__title" data-lang="lang-switcher">
                   язык
                 </div>
               </div>
@@ -49,6 +49,10 @@
                 <div class="language__item" id="english">eng</div>
               </div>
             </div>
+
+            <a href="./heroes.html" class="all-heroes" data-lang="all-heroes">
+              Все герои
+            </a>
   
           </div>
   
@@ -253,6 +257,11 @@
   
     </div>
   </div>
+
+  <audio id="main-audio-theme" loop>
+    <source src="https://static.wikia.nocookie.net/dota2_gamepedia/images/6/61/Music_default_ui_hero_select.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+  </audio>
 
   <script src="script.js"></script>
 </body>
