--- a/songbird/results.html
+++ b/songbird/results.html
@@ -41,6 +41,11 @@
         </div>
     </div>
 
+    <audio id="main-audio-theme" >
+        <source src="./assets/audio/victory.mpeg" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
+    
     <script src="script.js"></script>
 </body>
 </html>
