fix: change to correct path diraction

--- a/songbird/index.html
+++ b/songbird/index.html
@@ -31,7 +31,7 @@
                     Dota — одна из наиболее популярных онлайн игр современности. Каждый день в неё играют сотни тысяч людей. А главный турнир The International ежигодно приковывает взгляды миллионов людей со всего мира.
                     Поэтому предлогаю вам познакомится чуть ближе с миром этой игры, а знакомым с ней, испытать свои познания в репликах всем известных героев.
                 </span>
-                <a href="/game.html">
+                <a href="./game.html">
                     <div class="promo__btn">
                         <div class="promo__btn-inner-text" data-lang="start-game-btn">начать викторину</div>
                     </div>
