fix: change path on result page to correct

--- a/songbird/results.html
+++ b/songbird/results.html
@@ -32,7 +32,7 @@
                 </div>
             </h1>
             <div class="results__descr">
-                <a href="/game.html">
+                <a href="./game.html">
                     <div class="results__btn">
                         <div class="results__btn-inner-text" data-lang="restart-btn">начать сначала</div>
                     </div>
