fix: remove problem with starting audio on result page

--- a/songbird/results.html
+++ b/songbird/results.html
@@ -41,8 +41,8 @@
         </div>
     </div>
 
-    <audio id="main-audio-theme" >
-        <source src="./assets/audio/victory.mpeg" type="audio/mpeg">
+    <audio id="main-audio-theme" loop>
+        <source src="https://static.wikia.nocookie.net/dota2_gamepedia/images/3/39/Music_default_radiant_win.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
     
